[tool.poetry]
name = "GraphDB Python"
version = "0.0.1"
description = ""
authors = ["Plamen Tarkalanov <plamen.tarkalanov@ontotext.com>"]
packages = [
    { include = "src/graphdb" }
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
swagger-to = "4.1.1"
json-stream = "1.3.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


