[tool.poetry]
name = "GraphDB Python"
version = "0.0.5"
description = "GraphDB Python"
authors = ["Plamen Tarkalanov <plamen.tarkalanov@ontotext.com>"]
packages = [
    { include = "graphdb", from="src" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
swagger-to = "4.1.1"
json-stream = "1.3.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
source = "https://github.com/patzomir/graphdb-python-api"
download = "https://github.com/patzomir/graphdb-python-api/releases"
tracker = "https://github.com/patzomir/graphdb-python-api/issues"


